# tproj

./: Cargo.toml  README.md  tproj.yml
src/: cli.yml  config.rs  lib.rs  main.rs
src/subcommands/: apply.rs  create.rs  list.rs  mod.rs
tests/: test_yaml.rs
yaml-tests/: full.yml  no-description.yml  no-excludes.yml
