[package]
name = "tproj"
version = "0.1.0"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "^0.8" }
os_info = "^1.3"
